<resources>

    <string name="app_name">Example of persistence with SQLite</string>
    <string name="action_settings">Settings</string>

    <string name="btn_add_car">Add car</string>
    <string name="btn_list_all">List all</string>

    <string name="lbl_name">Name</string>
    <string name="lbl_plate">Plate</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel">Cancel</string>

</resources>

